# kldm_theises

./: .gitignore  KLDM-pipeline.ipynb  LICENSE  README.md  example_full_workflow.py  kldm  pyproject.toml  run_sampling.py  run_training.py  sample.lsf  tasks.py  train.lsf  trainHPC_dtu.lsf  train_base.lsf  train_plus.lsf  vel_scale_ablation.lsf
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh
configs/: KLDMConfig.yaml  LossConfig.yaml
configs/mp20/: Ablation_scaling_mp20_lattice_eps_em.yaml  VelScaleAblation_1pi.yaml  VelScaleAblation_2overpi.yaml  VelScaleAblation_2pi.yaml  VelScaleAblation_4pi.yaml  VelScaleAblation_noscale.yaml  VelScaleAblation_scale.yaml  eval_checkpoint_1850_em.yaml  eval_checkpoint_1850_pc.yaml  mp20_lattice_eps_em.yaml  mp20_lattice_eps_pc.yaml  mp20_lattice_x0_em.yaml  mp20_lattice_x0_pc.yaml  sampling_eval_eps_em.yaml  sampling_eval_eps_pc.yaml  tmp_eval_checkpoint_1850_em_50.yaml  tmp_eval_checkpoint_1850_pc_50.yaml
configs/samplers/: euler_exponential.yaml  euler_maruyama.yaml  predictor_corrector.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: data_overview.ipynb
reports/: Ablationstudy.ipynb  training.ipynb
src/end-KLDM/: kldm.py  pipeline.ipynb  train.py  trainHPC.py
src/kldm/: __init__.py  kldm.ipynb  kldm.py  lightning_datamodule.py  lightning_module.py  model.py  pipeline.ipynb  run_experiment.py  run_sampling.py  sample.py  testSample.py  train.py  trainHPC.py  train_lightning.py  training_utils.py  utils.py  weightning.ipynb
src/kldmPlus/: kldm.py  run_experiment.py  (+1 more)
tests/: test_cspvnet_facit_parity.py  test_data.py  test_data_parity.py  test_tdm_parity.py
(+72 files in other folders)
