[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "kldm"
version = "0.0.1"
description = "Bachelor theises"
authors = [
  { name = "Jonas Lolk Glymov, Alexander Lorentzen", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "ase==3.26.0",
  "chemparse==0.3.2",
  "emmet-core>=0.84,<0.85",
  "hydra-core>=1.3,<1.4",
  "mattergen==1.0.3",
  "numpy<2.0",
  "omegaconf>=2.3,<2.4",
  "pandas==2.2.3",
  "pytorch-lightning==2.0.6",
  "pymatgen>=2024.1.0",
  "requests",
  "setuptools>=70,<82",
  "torch==2.11.0; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
  "torch-geometric==2.5.3",
  "torch-scatter==2.1.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "tqdm",
  "wandb>=0.25.1",
  "smact>=3.2.0",
  "matminer>=0.9.3",
  "mattersim>=1.1.2",
]

[project.scripts]
run_experiment = "kldm.run_experiment:main"
run_sampling = "kldm.run_sampling:main"

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
  "jupyter>=1.1.1",
  "pre-commit>=4.5,<5.0",
  "pytest>=8.3.4",
]

[tool.uv]
dependency-metadata = [{ name = "mattergen", version = "1.0.3" }]
environments = [
  "sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
find-links = ["https://data.pyg.org/whl/torch-2.2.0+cpu.html"]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
